Bug #803 INTERVAL(NULL, ...) returns -1 instead of NULL
Submitted: 7 Jul 2003 10:40 Modified: 14 Jul 2003 3:32
Reporter: Melt van Schoor
Status: Closed
Category:Server Severity:S3 (Non-critical)
Version:4.0.12 OS:pc-linux (i686)
Assigned to: Ramil Kalimullin Target Version:

[7 Jul 2003 10:40] Melt van Schoor
Description:
Perhaps there is a reason, but I've not been able to find it...

How to repeat:
SELECT INTERVAL (NULL, 0, 5, 10);

Suggested fix:
Either change it to return NULL or change to manual to explain the -1.
[14 Jul 2003 3:32] Ramil Kalimullin
Thank you for your bug report. This issue has been addressed in the
documentation. The updated documentation will appear on our website
shortly, and will be included in the next release of the relevant
product(s).