Fix for the bug #803. Now INTERVAL(NULL, N1, N2, ...) returns NULL.